# learning-conan-1-app

./: .gitignore  .gitremotes  .travis.yml  CMakeLists.txt  README.md  bld.py  build.py  conanfile.py  configure.py  externals.cmake  main.cpp  travis-build.sh  travis.conan.yml
.travis/: install.sh  run.sh  run_project_build.sh
src/: CMakeLists.txt  app.cpp
test/: CMakeLists.txt
test_package/: conanfile.py
